[package]
name = "openai-rs-api"
description = "A Rust wrapper for the OpenAI API"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
awc = {version = "3.1.1", features = ["rustls"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.66"
actix-rt = "2.8.0"
rustls = "0.20"

webpki = "0.22.0"
webpki-roots = "0.23.1"
