[package]
name = "openai-rs-api"
authors = ["Danila Verbinskiy <hikionori>"]
description = "A Rust wrapper for the OpenAI API"
documentation = "https://www.docs.rs/openai-rs-api"
readme = "README.md"
license = "MIT"
version = "1.1.1"
edition = "2021"
keywords = ["ai", "machine-learning", "openai", "library", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
awc = {version = "3.1.1", features = ["rustls"]}
tokio = {version = "1.12.0", features = ["full"]}
rustls = "0.20"

serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.66"

webpki = "0.22.0"
webpki-roots = "0.23.1"
serde_with = "3.0.0"
async-trait = "0.1.70"

[features]
list_models = []
chat = []
completions = []
embeddings = []
files = []
audio = []
images = []
edits = []
fine_tunes = []
moderations = []
full = ["list_models", "chat", "completions", "embeddings", "files", "audio", "images", "edits", "fine_tunes", "moderations"]
default = ["full"]
